--- a/templates/yunalish.html
+++ b/templates/yunalish.html
@@ -5,6 +5,24 @@
     <title>Yunalishlar bo`limi</title>
 </head>
 <body>
+<h1>Yunalishlar</h1>
+<hr>
+<h2>Yunalish qo'shish</h2>
+    <form action="/yunalish" method="post">
+        <label for="nom">Nom: </label>
+        <input type="text" name="nom" id="nom" >
+        <br>
+         <label for="kod">Kod: </label>
+        <input type="text" name="kod" id="kod">
+        <br>
+         <label for="izoh">Izoh: </label>
+        <textarea name="izoh" id="izoh">
+        </textarea>
+        <br>
+        <input type="submit" value="Saqlash">
+        <input type="reset" value="Tozalash">
+    </form>
+<h2>Yunalishlar ro'yxati</h2>
     <table>
         <thead>
             <tr>
@@ -12,6 +30,7 @@
                 <th>nom</th>
                 <th>kod</th>
                 <th>izoh</th>
+                <th>amal</th>
             </tr>
         </thead>
 
@@ -24,7 +43,7 @@
                     <td>{{y.nom}}</td>
                     <td>{{y.kod}}</td>
                     <td>{{y.izoh}}</td>
-
+                    <td><a href="/yunalish/ochirish?id={{y.id}}">O'chrish</a> </td>
                 </tr>
             {% endfor %}
         {% endif %}
