--- a/templates/talaba.html
+++ b/templates/talaba.html
@@ -2,9 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Talabalar bo`limi</title>
 </head>
 <body>
+<h1>Talabalar</h1>
+<hr>
+<h2>Talaba qo'shish</h2>
+    <form action="/talaba" method="post">
+        <label for="ism">Ism: </label>
+        <input type="text" name="ism" id="ism" >
+        <br>
+         <label for="familiya">Familiya: </label>
+        <input type="text" name="familiya" id="familiya">
+        <br>
+         <label for="telefon">Telefon raqami: </label>
+        <textarea name="telefon" id="telefon">
+        </textarea>
+        <br>
+        <input type="submit" value="Saqlash">
+        <input type="reset" value="Tozalash">
+    </form>
+<h2>Talabalar ro'yxati</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>id</th>
+                <th>ism</th>
+                <th>familiya</th>
+                <th>telefon</th>
+                <th colspan="2">amal</th>
+            </tr>
+        </thead>
 
+        <tbody>
+        {% if talabalar %}
+            {% for y in talabalar %}
+
+                <tr>
+                    <td>{{y.id}}</td>
+                    <td>{{y.ism}}</td>
+                    <td>{{y.familiya}}</td>
+                    <td>{{y.telefon}}</td>
+                    <td><a href="/talaba/ochirish?id={{y.id}}">O'chirish</a> </td>
+                    <td><a href="/talaba?tahrirlash={{y.id}}">Tahrirlash</a> </td>
+                </tr>
+            {% endfor %}
+        {% endif %}
+        </tbody>
+    </table>
 </body>
 </html>
