--- a/templates/yunalish.html
+++ b/templates/yunalish.html
@@ -43,7 +43,7 @@
                     <td>{{y.nom}}</td>
                     <td>{{y.kod}}</td>
                     <td>{{y.izoh}}</td>
-                    <td><a href="/yunalish/ochirish?id={{y.id}}">O'chrish</a> </td>
+                    <td><a href="/yunalish/ochirish?id={{y.id}}">O'chirish</a> </td>
                     <td><a href="/yunalish?tahrirlash={{y.id}}">Tahrirlash</a> </td>
                 </tr>
             {% endfor %}
