--- a/templates/guruh.html
+++ b/templates/guruh.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Guruhlar bo`limi</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 <body>
+{% include "header.html" %}
 <h1>Guruhlar</h1>
 <hr>
 <h2>Guruh qo'shish</h2>
@@ -12,25 +15,35 @@
         <label for="nom">Nom: </label>
         <input type="text" name="nom" id="nom" >
         <br>
-         <label for="kod">Kod: </label>
-        <input type="text" name="kod" id="kod">
+
+         <label for="yunalish">Yunalish: </label>
+        <select name="yunalish_id" id="yunalish">
+            {% if yunalishlar %}
+                {% for y in yunalishlar %}
+                    <option value="{{y.id}}">{{y.nom}}</option>
+                {% endfor %}
+            {% endif %}
+        </select>
         <br>
-         <label for="tili">Tili: </label>
-        <textarea name="tili" id="tili">
-        </textarea>
+        <label for="til">Til: </label>
+        <input name="til" id="til" />
+        <br>
+         <label for="yil">Yil: </label>
+        <input name="yil" id="yil" />
         <br>
         <input type="submit" value="Saqlash">
         <input type="reset" value="Tozalash">
     </form>
 <h2>Guruhlar ro'yxati</h2>
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <th>id</th>
                 <th>nom</th>
-                <th>kod</th>
-                <th>tili</th>
-                <th colspan="2">amal</th>
+                <th>yunalish</th>
+                <th>til</th>
+                <th>yil</th>
+                <th >amal</th>
             </tr>
         </thead>
 
@@ -41,10 +54,11 @@
                 <tr>
                     <td>{{y.id}}</td>
                     <td>{{y.nom}}</td>
-                    <td>{{y.kod}}</td>
-                    <td>{{y.tili}}</td>
-                    <td><a href="/guruh/ochirish?id={{y.id}}">O'chirish</a> </td>
-                    <td><a href="/guruh?tahrirlash={{y.id}}">Tahrirlash</a> </td>
+                    <td>{{y.yunalish.nom}}</td>
+                    <td>{{y.til}}</td>
+                    <td>{{y.yil}}</td>
+                    <td><a href="/guruh/ochirish?id={{y.id}}">O'chirish</a>
+                    <a href="/guruh?tahrirlash={{y.id}}">Tahrirlash</a> </td>
                 </tr>
             {% endfor %}
         {% endif %}
@@ -52,3 +66,4 @@
     </table>
 </body>
 </html>
+
