--- a/templates/talaba.html
+++ b/templates/talaba.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Talabalar bo`limi</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 <body>
+{% include "header.html" %}
 <h1>Talabalar</h1>
 <hr>
 <h2>Talaba qo'shish</h2>
