--- a/templates/yunalish.html
+++ b/templates/yunalish.html
@@ -1,102 +1,124 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Yunalishlar bo`limi</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  
-  
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+
 </head>
+
 <body>
-<div class="container">
-{% include "header.html" %}
-<h1>Yunalishlar</h1>
+    <div class="container">
+        {% include "header.html" %}
+        <h1>Yunalishlar</h1>
 
-<hr>
-{% if yunalish  %}
-<div class="card">
-        
-        <div class="card-header">{{yunalish.id}} - id li yunalishni tahrirlash</div>
-        <div class="card-body">
-            <form action="/yunalish/tahrirlash" method="post">
-                <div class="form-group">
-                    <label for="id">ID: </label>
-                    <input class="form-control" type="text" name="id" id="id" value="{{yunalish.id}}" readonly>
-                </div>
-                <div class="form-group">
-                    <label for="nom">Nom: </label>
-                    <input class="form-control" type="text" name="nom" id="nom" value="{{yunalish.nom}}">
-                </div>
-                <br>
-                 <label for="kod">Kod: </label>
-                <input type="text" name="kod" id="kod" value="{{yunalish.kod}}">
-                <br>
-                 <label for="izoh">Izoh: </label>
-                <textarea name="izoh" id="izoh" data-value="{{yunalish.izoh}}">
+        <hr>
+        {% if yunalish %}
+        <div class="card">
+
+            <div class="card-header">{{yunalish.id}} - id li yunalishni tahrirlash</div>
+            <div class="card-body">
+                <form action="/yunalish/tahrirlash" method="post">
+                    <div class="form-group">
+                        <label for="id">ID: </label>
+                        <input class="form-control" type="text" name="id" id="id" value="{{yunalish.id}}" readonly>
+                    </div>
+                    <div class="form-group">
+                        <label for="nom">Nom: </label>
+                        <input class="form-control" type="text" name="nom" id="nom" value="{{yunalish.nom}}">
+                    </div>
+                    <div class="form-group">
+                        <label for="kod">Kod: </label>
+                        <input type="text" class="form-control" name="kod" id="kod" value="{{yunalish.kod}}">
+                    </div>
+                    <div class="form-group">
+                        <label for="izoh">Izoh: </label>
+                        <textarea class="form-control" name="izoh" id="izoh" data-value="{{yunalish.izoh}}">
                 </textarea>
-                <br>
-                <input class="btn" type="submit" value="Tahrirlash">
-                <a class="btn" href="/yunalish">Bekor qilish</a>
-            </form>
+                    </div>
+                    <input type="submit" value="Tahrirlash">
+                    <button><a href="/yunalish">Bekor qilish</a></button>
+                </form>
 
+            </div>
         </div>
-    </div>
-</div>    
 
-        
-{% else %}
-    <h2>Yunalish qo'shish</h2>
-        <form action="/yunalish" method="post">
-            <label for="nom">Nom: </label>
-            <input type="text" name="nom" id="nom" >
-            <br>
-             <label for="kod">Kod: </label>
-            <input type="text" name="kod" id="kod">
-            <br>
-             <label for="izoh">Izoh: </label>
-            <textarea name="izoh" id="izoh">
-            </textarea>
-            <br>
-            <input class="btn" type="submit" value="Saqlash">
-            <input class="btn" type="reset" value="Tozalash">
-        </form>
-{% endif %}
-<h2>Yunalishlar ro'yxati</h2>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>id</th>
-                <th>nom</th>
-                <th>kod</th>
-                <th>izoh</th>
-                <th >amal</th>
-            </tr>
-        </thead>
 
-        <tbody>
-        {% if yunalishlar %}
-            {% for y in yunalishlar %}
+
+        {% else %}
+        <h2>Yunalish qo'shish</h2>
+        <div class="card">
+            <div class="card-body">
+                <form action="/yunalish" method="post">
+                    <div class="form-group">
+                        <label for="nom">Nom: </label>
+                        <input class="form-control" placeholder="Yunalish nomi" type="text" name="nom" id="nom">
+                    </div>
+                    <div class="form-group">
+                        <label for="kod">Kod: </label>
+                        <input class="form-control" placeholder="Yunalish kod" type="text" name="kod" id="kod">
+                    </div>
+                    <div class="form-group">
+                        <label for="izoh">Izoh: </label>
+                        <textarea class="form-control" placeholder="Fikringizni qoldiring" name="izoh"
+                            id="izoh"> </textarea>
+                    </div>
+                    <input type="submit" value="Saqlash">
+                    <input type="reset" value="Tozalash">
+                </form>
+            </div>
+        </div>
+        {% endif %}
+        <h2>Yunalishlar ro'yxati</h2>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Nom</th>
+                    <th>Kod</th>
+                    <th>Izoh</th>
+                    <th></th>
+                </tr>
+            </thead>
+
+            <tbody>
+                {% if yunalishlar %}
+                {% for y in yunalishlar %}
 
                 <tr>
                     <td>{{y.id}}</td>
                     <td>{{y.nom}}</td>
                     <td>{{y.kod}}</td>
                     <td>{{y.izoh}}</td>
-                    <td><a href="/yunalish/ochirish?id={{y.id}}"><button class="class=btn btn-primary">O'chirish </button></a>
-                        <a href="/yunalish?tahrirlash={{y.id}}"><button class="class=btn btn-primary">Tahrirlash</button></a> </td>
+                    <td><a href="/yunalish/ochirish?id={{y.id}}"><button class="class=btn btn-primary">O'chirish
+                            </button></a>
+                        <a href="/yunalish?tahrirlash={{y.id}}"><button
+                                class="class=btn btn-primary">Tahrirlash</button></a>
+                    </td>
                 </tr>
-            {% endfor %}
-        {% endif %}
-        </tbody>
-    </table>
-</div>
+                {% endfor %}
+                {% endif %}
+            </tbody>
+        </table>
+    </div>
+    </div>
 
 
-     <!-- Optional JavaScript -->
+    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
