--- a/templates/talaba.html
+++ b/templates/talaba.html
@@ -15,29 +15,64 @@
         <h1>Talabalar</h1>
         <hr>
         <h2>Talaba qo'shish</h2>
-        <form action="/talaba" method="post">
-            <label for="ism">Ism: </label>
-            <input type="text" name="ism" id="ism">
-            <br>
-            <label for="familiya">Familiya: </label>
-            <input type="text" name="familiya" id="familiya">
-            <br>
-            <label for="telefon">Telefon raqami: </label>
-            <textarea name="telefon" id="telefon">
-        </textarea>
-            <br>
-            <input type="submit" value="Saqlash">
-            <input type="reset" value="Tozalash">
-        </form>
+        {% if talaba %}
+        <div class="card">
+            <h3><div class="card-header">{{ talaba.id }} - id li talabani tahrirlash </div></h3>
+            <div class="card-body">
+                <form action="/talaba/tahrirlash" method="post">
+                    <div class="form-group">
+                        <div class="form-group">
+                            <label for="id">ID: </label>
+                            <input class="form-control" type="text" name="id" id="id" value="{{talaba.id}}" readonly>
+                        </div>
+                        <label for="ism">Ism: </label>
+                        <input class="form-control" type="text" name="ism" id="ism" value="{{talaba.ism}}">
+                    </div>
+                    <div class="form-group">
+                        <label for="familiya">Familiya: </label>
+                        <input type="text" class="form-control" name="familiya" id="familiya" value="{{talaba.familiya}}">
+                    </div>
+                    <div class="form-group">
+                        <label for="telefon">Telefon raqami: </label>
+                        <input name="telefon" class="form-control" id="telefon" value="{{talaba.telefon}}"> 
+                    </div>
+                    <input  type="submit" value="Tahrirlash">
+                    <button> <a href="/talaba">Bekor qilish</a></button>
+                </form>
+            </div>
+        </div>  
+        {% else %}
+        <div class="card">
+            <div class="card-body">
+                <form action="/talaba" method="post">
+                    <div class="form-group">
+                        <label for="ism">Ism: </label>
+                        <input class="form-control" placeholder="Ismini kiriting" type="text" name="ism" id="ism">
+                    </div>
+                    <div class="form-group">
+                        <label for="familiya">Familiya: </label>
+                        <input type="text" class="form-control" placeholder="Familiyani kiriting" name="familiya"
+                            id="familiya">
+                    </div>
+                    <div class="form-group">
+                        <label for="telefon">Telefon raqami: </label>
+                        <input name="telefon" class="form-control" placeholder="Shaxsiy telefon raqam" id="telefon">
+                    </div>
+                    <input type="submit" value="Saqlash">
+                    <input type="reset" value="Tozalash">
+                </form>
+            </div>
+        </div>
+        {% endif %}
         <h2>Talabalar ro'yxati</h2>
-        <table>
+        <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>id</th>
-                    <th>ism</th>
-                    <th>familiya</th>
-                    <th>telefon</th>
-                    <th colspan="2">amal</th>
+                    <th>Id</th>
+                    <th>Ism</th>
+                    <th>Familiya</th>
+                    <th>Telefon</th>
+                    <th></th>
                 </tr>
             </thead>
 
@@ -50,14 +85,27 @@
                     <td>{{y.ism}}</td>
                     <td>{{y.familiya}}</td>
                     <td>{{y.telefon}}</td>
-                    <td><a href="/talaba/ochirish?id={{y.id}}">O'chirish</a> </td>
-                    <td><a href="/talaba?tahrirlash={{y.id}}">Tahrirlash</a> </td>
+                    <td><a href="/talaba/ochirish?id={{y.id}}"><button class="class=btn btn-primary">O'chirish
+                            </button></a>
+                        <a href="/talaba?tahrirlash={{y.id}}"><button
+                                class="class=btn btn-primary">Tahrirlash</button></a>
+                    </td>
                 </tr>
                 {% endfor %}
                 {% endif %}
             </tbody>
         </table>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
